<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hector.proyectodamdaw.Activitys.EditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="20dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="20dp">

                <ImageView
                    android:id="@+id/imgLogoNameSingUp"
                    android:layout_width="90dp"
                    android:layout_height="63dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_login_icon_foreground" />

                <EditText
                    android:id="@+id/edtNameSingUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edtNameSingUp"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/imgLogoSurnameNameSingUp"
                    android:layout_width="90dp"
                    android:layout_height="63dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_login_icon_foreground" />

                <EditText
                    android:id="@+id/edtSurnameSingUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edtSurnameSingUp"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/imgLogoEmailSingUp"
                    android:layout_width="80dp"
                    android:layout_height="53dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:scaleX="1.3"
                    android:scaleY="1.3"
                    app:srcCompat="@mipmap/ic_email_icon_foreground" />

                <EditText
                    android:id="@+id/edtEmailSingUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edtEmailSingUp"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/imgLogoRepeatEmailSingUp"
                    android:layout_width="80dp"
                    android:layout_height="53dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:scaleX="1.3"
                    android:scaleY="1.3"
                    app:srcCompat="@mipmap/ic_email_icon_foreground" />

                <EditText
                    android:id="@+id/edtRepeatEmailSingUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edtRepeatEmailSingUp"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/imgLogoPasswSingUp"
                    android:layout_width="90dp"
                    android:layout_height="63dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_locked_foreground" />

                <EditText
                    android:id="@+id/edtPasswSingUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edtPasswSingUp"
                    android:inputType="textPassword"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/imgLogoRepeatPasswSingUp"
                    android:layout_width="90dp"
                    android:layout_height="63dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_locked_foreground" />

                <EditText
                    android:id="@+id/edtRepeatPasswSingUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edtRepeatPasswSingUp"
                    android:inputType="textPassword"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdbProposalInProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rdbProposalInProgress" />

                    <RadioButton
                        android:id="@+id/rdbProposalClosed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rdbProposalClosed" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <Button
                    android:id="@+id/btnAcceptSingUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnAcceptSingUp" />
            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
