<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Negro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="20dp">

                <ImageView
                    android:id="@+id/imgAppLogoLogin"
                    android:layout_width="match_parent"
                    android:layout_height="109dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_balance_foreground" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="20dp">

                <ImageView
                    android:id="@+id/imgLogoUserLogin"
                    android:layout_width="50dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="false"
                    android:scaleType="fitCenter"
                    android:scaleX="1.2"
                    android:scaleY="1.2"
                    app:srcCompat="@drawable/avatar" />

                <EditText
                    android:id="@+id/edtUserLogin"
                    android:layout_width="275dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/txvUserLogin"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/Blanco"
                    android:textColorHint="@color/Blanco"
                    android:textColorLink="@color/Blanco"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="20dp">

                <ImageView
                    android:id="@+id/imgLogoUserLogin2"
                    android:layout_width="50dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/padlock" />

                <EditText
                    android:id="@+id/edtPasswLogin"
                    android:layout_width="275dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edtPasswLogin"
                    android:inputType="textPassword"
                    android:textColor="@color/Blanco"
                    android:textColorHint="@color/Blanco"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="10dp">


                <CheckBox
                    android:id="@+id/ckbRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/Blanco"
                    android:text="@string/ckbRememberMe"
                    android:textColor="@color/Blanco" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/btnAcceptLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Negro"
                    android:elevation="0dp"
                    android:text="@string/btnAcceptLogin"
                    android:textColor="@color/Blanco" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/txvForgotPassw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:text="@string/txvForgotPassw"
                    android:textAlignment="center"
                    android:textColor="@color/Blanco" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:background="@color/AzulFuerte" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/txvRegisterLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txvSingUpLogin"
                    android:textAlignment="center"
                    android:textColor="@color/Blanco"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <Button
                    android:id="@+id/btnRegisterLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Negro"
                    android:text="@string/btnSingUpLogin"
                    android:textColor="@color/Blanco" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>